--- a/server.properties
+++ b/server.properties
@@ -25,7 +25,7 @@ enable-status=true
 hardcore=false
 enable-command-block=false
 network-compression-threshold=256
-max-players=20
+max-players=100
 max-world-size=29999984
 resource-pack-sha1=
 function-permission-level=2
@@ -47,6 +47,6 @@ level-seed=
 prevent-proxy-connections=false
 use-native-transport=true
 enable-jmx-monitoring=false
-motd=A Minecraft Server
+motd=Official Froggy SMP
 rate-limit=0
 enable-rcon=false
